--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1
 author=Haaris Moosa
 maintainer=Startoon Labs
 sentence=This is just a test version.
-paragraph=Like this project? Please star it on GitHub!
+paragraph=This is for test purposes, later to be updated with the proper source files.
 category=Other
 url=https://github.com/haarism19/test_for_slab
 architectures=*
