--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=Slab_test_Haaris
 version=1.0
-author=Haaris Moosa
+author=Haaris Moosa <haaris_m19@yahoo.com>
 maintainer=Startoon Labs
 sentence=This is just a test version.
 paragraph=This is for test purposes, later to be updated with the proper source files.
